Mask Extract bad solution #70102

Closed
opened 2019-09-20 09:55:36 +02:00 by Alberto Velázquez · 10 comments

System Information
Operating system: Winodows 10
Graphics card:

Blender Version
Broken: Blender2.81 alpha, 19-9-2019-13:32

Short description of error
Strange geometry solution with Mask extractor

image.png

Exact steps for others to reproduce the error
With the file provided, original mesh and extracted mesh, select the bone and make a "Mask Extract" so you can see how it create a mesh with a bad topology mesh.

bug mask extractor.blend

**System Information** Operating system: Winodows 10 Graphics card: **Blender Version** Broken: Blender2.81 alpha, 19-9-2019-13:32 **Short description of error** Strange geometry solution with Mask extractor ![image.png](https://archive.blender.org/developer/F7760461/image.png) **Exact steps for others to reproduce the error** With the file provided, original mesh and extracted mesh, select the bone and make a "Mask Extract" so you can see how it create a mesh with a bad topology mesh. [bug mask extractor.blend](https://archive.blender.org/developer/F7760465/bug_mask_extractor.blend)

Added subscriber: @AlbertoVelazquez

Added subscriber: @AlbertoVelazquez
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Please provide more information on how to reproduce the bug. I have no idea what I'm supposed to do in that file. Also make a screenshot that shows what's wrong.

Not sure if it is important for this bug, but there seem to be missing textures in this file. Please pack any textures into the file.

Please provide more information on how to reproduce the bug. I have no idea what I'm supposed to do in that file. Also make a screenshot that shows what's wrong. Not sure if it is important for this bug, but there seem to be missing textures in this file. Please pack any textures into the file.

In #70102#780448, @JacquesLucke wrote:
Please provide more information on how to reproduce the bug. I have no idea what I'm supposed to do in that file. Also make a screenshot that shows what's wrong.

Not sure if it is important for this bug, but there seem to be missing textures in this file. Please pack any textures into the file.

Sorry, I mistake the file for production with the file to show the bug.

> In #70102#780448, @JacquesLucke wrote: > Please provide more information on how to reproduce the bug. I have no idea what I'm supposed to do in that file. Also make a screenshot that shows what's wrong. > > Not sure if it is important for this bug, but there seem to be missing textures in this file. Please pack any textures into the file. Sorry, I mistake the file for production with the file to show the bug.
Member

I can reproduce the issue. Please prepare the file a bit better next time, I don't quite understand why the file is in the image editor when I need to see the 3d view to see the bug.

To reproduce:

  1. Open File
  2. Search and run "Mesh Extract" operator.
    bug mask extractor (updated).blend
I can reproduce the issue. Please prepare the file a bit better next time, I don't quite understand why the file is in the image editor when I need to see the 3d view to see the bug. To reproduce: 1. Open File 2. Search and run "Mesh Extract" operator. [bug mask extractor (updated).blend](https://archive.blender.org/developer/F7760544/bug_mask_extractor__updated_.blend)

In #70102#780575, @JacquesLucke wrote:
Please prepare the file a bit better next time, I don't quite understand why the file is in the image editor when I need to see the 3d view to see the bug.

I use two monitors, when people use one monitor the windows in the secondary monitors go to the main monitor hidding the main window.

> In #70102#780575, @JacquesLucke wrote: > Please prepare the file a bit better next time, I don't quite understand why the file is in the image editor when I need to see the 3d view to see the bug. I use two monitors, when people use one monitor the windows in the secondary monitors go to the main monitor hidding the main window.

Added subscriber: @nokipaike

Added subscriber: @nokipaike

@AlbertoVelazquez best way to prepare demo bug files is to start blender in factory reset mode and save the file in this way

@AlbertoVelazquez best way to prepare demo bug files is to start blender in factory reset mode and save the file in this way
Pablo Dobarro was assigned by Brecht Van Lommel 2019-10-03 00:12:35 +02:00

This issue was referenced by 8a1f4fc8a7

This issue was referenced by 8a1f4fc8a78ef39654df5e8ea46b2d227ada4834
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70102
No description provided.